add patch method to controller
